<resources>
    <string name="app_name">Expense Manager</string>
    <string name="expense_type">Expense type</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="add_expense">Add Expense</string>
    <string name="notes">Notes</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="search_dialog_close">close</string>
    <string name="search_dialog_title">Select\n</string>
    <string name="log_expense">Log Expense</string>

</resources>