<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="viewModel"
            type="com.pas.financetracker.ui.expense_manager.ExpenseManagerViewModel" />

    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingBottom="16dp">


            <View
                android:id="@+id/view_top"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/color_grey_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="Add Expense"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:fontType="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_top"

                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:hint="@string/expense_type"
                android:paddingTop="8dp"
                android:paddingBottom="5dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="3dp"
                app:boxCornerRadiusBottomStart="3dp"
                app:boxCornerRadiusTopEnd="3dp"
                app:boxCornerRadiusTopStart="3dp"
                app:layout_constraintTop_toBottomOf="@id/title"

                app:boxStrokeColor="@color/hintcolor"
                app:boxStrokeWidth="1dp"
                app:hintTextAppearance="@style/TextInputLayoutHint"
                app:hintTextColor="@color/hintcolor"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_category"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"

                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/nunito_bold"
                    android:imeOptions="actionSearch"
                    android:inputType="none"
                    android:maxLines="1"
                    android:paddingVertical="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.pas.financetracker.ui.widgets.SearchableSpinners
                android:id="@+id/spinCategory"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/til_category"
                app:layout_constraintEnd_toEndOf="@id/til_category"
                app:layout_constraintStart_toStartOf="@id/til_category"
                app:layout_constraintTop_toTopOf="@id/til_category"
                app:showHint="false" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:hint="@string/amount"
                android:paddingTop="8dp"
                android:paddingBottom="5dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="3dp"
                app:boxCornerRadiusBottomStart="3dp"
                app:boxCornerRadiusTopEnd="3dp"
                app:boxCornerRadiusTopStart="3dp"

                app:boxStrokeColor="@color/hintcolor"
                app:boxStrokeWidth="1dp"
                app:hintTextAppearance="@style/TextInputLayoutHint"
                app:hintTextColor="@color/hintcolor"
                app:layout_constraintTop_toBottomOf="@+id/til_category">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:fontFamily="@font/nunito_bold"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingVertical="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:hint="@string/date"
                android:paddingTop="8dp"
                android:paddingBottom="5dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="3dp"
                app:boxCornerRadiusBottomStart="3dp"
                app:boxCornerRadiusTopEnd="3dp"
                app:boxCornerRadiusTopStart="3dp"

                app:boxStrokeColor="@color/hintcolor"
                app:boxStrokeWidth="1dp"
                app:hintTextAppearance="@style/TextInputLayoutHint"
                app:hintTextColor="@color/hintcolor"
                app:layout_constraintTop_toBottomOf="@+id/til_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/ic_calendar"

                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/nunito_bold"
                    android:imeOptions="actionSearch"
                    android:inputType="none"
                    android:maxLines="1"
                    android:paddingVertical="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:hint="@string/notes"
                android:paddingTop="8dp"
                android:paddingBottom="5dp"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="3dp"
                app:boxCornerRadiusBottomStart="3dp"
                app:boxCornerRadiusTopEnd="3dp"
                app:boxCornerRadiusTopStart="3dp"

                app:boxStrokeColor="@color/hintcolor"
                app:boxStrokeWidth="1dp"
                app:hintTextAppearance="@style/TextInputLayoutHint"
                app:hintTextColor="@color/hintcolor"
                app:layout_constraintTop_toBottomOf="@+id/til_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_notes"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:fontFamily="@font/nunito_bold"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingVertical="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_notes">

                <com.pas.financetracker.ui.widgets.CustomButton
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rect_button_primary"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:text="@string/save"
                    app:fontType="bold"

                   />

                <com.pas.financetracker.ui.widgets.CustomButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/cancel"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rect_button_primary"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:fontType="bold"

                   />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>

